Upload tracker finished. Downloading finished. Seems all gucci and ready to go :)